<resources>
    <string name="app_name">Calculator</string>

    <string name="stackThirdPosTextView">Stack Slot: 4</string>
    <string name="stackSecondPosTextView">Stack Slot: 3</string>
    <string name="stackFirstPosTextView">Stack Slot: 2</string>
    <string name="stackZeroPosTextView">Stack Slot: 1</string>
    <string name="inputStringTextView"> --Input-- </string>

    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="div">/</string>

    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="mult">*</string>

    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="min">-</string>

    <string name="decimal">.</string>
    <string name="zero">0</string>
    <string name="enter">Enter</string>
    <string name="plus">+</string>

    <string name="drop">Drop</string>
    <string name="del">Del</string>
</resources>
